.. This file should contain the changes for the last release only, which
   will be included on the package's page on pypi. All older entries are
   kept in HISTORY.txt

Changelog
=========

4.0 - Unreleased
----------------

- Replaced has_key method calls with containment checks via `in`.
  [hannosch]

- Replaced a direct interface invocation with a queryAdapter call, to avoid
  an internal getattr call and make the pattern clearer.
  [hannosch]

- Replaced here with context in all templates and scripts. The old spelling is
  still supported, but we need to settle on one to avoid confusion.
  [hannosch]

- Optimized the types tool action lookup further to avoid Acquisition lookups.
  [hannosch]

- Simplified the normalizeString method.
  [hannosch]

- Optimized the action lookup code and implemented category restriction for
  the types tool in the same way it was available for the actions tool.
  [hannosch]

- Removed remaining sys.modules hacks to provide the browser.ploneview as
  browser.plone.
  [hannosch]

- Removed last unused external methods and PloneInitialize code. To my
  knowledge the Windows installer doesn't use this code anymore.
  [hannosch]

- Removed "Listed in searches" property from the personalize form and
  memberdata. The setting wasn't used by any code anymore. This closes
  http//dev.plone.org/plone/ticket/8064.
  [hannosch]

- Write the doctype definition in the main_template in a way that does not
  claim to be valid XML, as the main_template really isn't.
  [hannosch]

- Worked around `sys._getframe` call in mark_view.
  [malthe, hannosch]

- Removed macro slot for changing the document type; this was not
  correct XML and should this flexibility be required, it's
  recommended to customize `main_template.pt`.
  [malthe]

- Turned deprecated string 'Unauthorized' exceptions into real exceptions.
  [davisagli]

- Removed module alias for the ploneview formerly named plone. 
  [hannosch]
