@@ -8,6 +8,11 @@ Changelog
 4.0 - Unreleased
 ----------------
 
+- Made sure the plone.indexer registration works by introducing a more
+  specific IPloneCatalogTool marker interface and registering the indexable
+  object wrapper for this.
+  [optilude]
+
 - Replaced has_key method calls with containment checks via `in`.
   [hannosch]
 
